# debezium-zulip-summary

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
src/zulip_summary/: __init__.py  __main__.py  cli.py  config.py  file_handler.py  ollama_client.py  summarizer.py
