[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zulip-summary"
version = "0.1.0"
description = "LangChain-based text summarization tool using local Ollama models"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Vojtech Juranek"}
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zulip-summary = "zulip_summary.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
